Stop minifying assets

--- a/screen.css
+++ b/screen.css
@@ -100,5 +100,5 @@ footer {
     height: 1.125em;
     margin: 1em 0 -2.125em;
     line-height: 1.125em;
-    color: var(--dark-blues);
+    color: var(--dark-blue);
 }
