--- a/screen.css
+++ b/screen.css
@@ -86,7 +86,7 @@ img {
 
 h1 {
     font-size: 1.375em;
-    line-height: 1.4;
+    line-height: normal;
     margin: 1.5rem 0 1rem;
     color: var(--dark-blue);
 }
@@ -95,6 +95,7 @@ p {
     color: var(--grayish-blue);
     padding: 0 1em;
     font-size: 0.9375em;
+    line-height: normal;
 }
 
 footer {
